# simmerv

./: .gitmodules  Cargo.toml  README.md  TODO.md  run-riscv-tests.sh
cli/: Cargo.toml
cli/src/: dummy_terminal.rs  main.rs  nonblocknoecho.rs  popup_terminal.rs
resources/linux/bbl/: Readme.md
resources/linux/opensbi/: Readme.md
riscof/: .gitignore  Makefile  config.ini
riscof/dummy/: riscof_dummy.py
riscof/riscvrust/: riscof_riscvrust.py  riscvrust_isa.yaml
riscof/riscvrust/env/: model_test.h
riscv-tests/: report.sh  stat.sh
src/: cpu.rs  csr.rs  dag_decoder.rs  default_terminal.rs  elf_analyzer.rs  fp.rs  lib.rs  memory.rs  mmu.rs  terminal.rs  tree_decoder.rs
src/cpu/: fp.rs  rvc.rs
src/device/: clint.rs  dtb.dtb  dts.dts  plic.rs  uart.rs  vda1.dtb  vda1.dts  virtio_block_disk.rs
wasm/: Cargo.toml  build.sh
wasm/npm/: README.md  package.json
wasm/npm/nodejs/: riscv_emu_rust_wasm.js  riscv_emu_rust_wasm_bg.wasm  riscv_emu_rust_wasm_bg.wasm.d.ts
wasm/npm/pkg/: riscv_emu_rust_wasm.d.ts  riscv_emu_rust_wasm.js  riscv_emu_rust_wasm_bg.js  riscv_emu_rust_wasm_bg.wasm
wasm/src/: lib.rs
wasm/web/: App.js  README.md  index.html  riscv_emu_rust_wasm.js  riscv_emu_rust_wasm_bg.wasm  simmerv_wasm.js  simmerv_wasm_bg.wasm
