[package]
name = "riscv_emu_rust"
version = "0.2.0"
edition = "2021"
description = "RISC-V emulator written in Rust"
authors = ["Takahiro <hogehoge@gachapin.jp>", "Tommy Thorn <tommy-github2@thorn.ws>"]
license = "MIT"
homepage = "https://github.com/tommythorn/riscv-rust"
repository = "https://github.com/tommythorn/riscv-rust"
exclude = [
  "resources/*",
  "screenshots/*",
  "cli/*",
  "wasm/*"
]

[workspace]
members = [".", "cli", "wasm"]

[lints.clippy]
pedantic = { level = "warn", priority = -2 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
unreadable-literal = "allow"

[badges]
travis-ci = { repository = "tommythorn/riscv-rust" }

[dependencies]
fnv = "1.0.7"
